changes to HTML

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <p>Lorem ipsum dolor sit amet.</p>
     <h3>Ytterligare en underrubrik</h3>
     <p>Lorem ipsum dolor sit amet.</p>
+    <p>Klicka på knapparna och se vad som händer!</p>
     <button onclick="greet(myName)">Greet me!</button>
     <button onclick="darkMode()" id="btn">Dark mode</button>
     <script src="index.js"></script>
